[gd_scene load_steps=2 format=3 uid="uid://dgistbjkrs4hx"]

[ext_resource type="Script" uid="uid://cbi2s1lqp560r" path="res://ui/main_menu/main_menu.gd" id="1_uhj5c"]

[node name="MainMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uhj5c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(132, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SinglePlayerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Single Player"

[node name="MultiplayerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Multiplayer"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"
